--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
                               |      |    |   |                    
                               |      |    |   |                    
                  +------------+      |    |   |                    
-                 |                   |    |   |    +--------------+
-                 |                   |    |   +--->|  <a href="about.html">о проекте</a>    |
-                 v                   |    |        +--------------+
+                 |                   |    |   |            +--------------+
+                  |                   |    |   +----------->|  <a href="about.html">о проекте</a>    |
+                 v                   |    |                +--------------+
        +------------------+       +--+    |                        
-       |<a href="geeklist.html">путеводитель гика</a> |       |       |                        
+       |<a href="geeklist.html"> путеводитель гика</a> |      |       |                        
        +------------------+       |       |        +--------------+
                                   |       +------->|   новости    |
                                   |                +--------------+
                                   |                                
                                   |                                
                                   v                                
-                        +--------------------+                      
-                        |<a href="readinglist.html">читательский маршрут</a>|                      
-                        +--------------------+                      
+                        +---------------------+                      
+                        |<a href="readinglist.html"> читательский маршрут</a>|                      
+                        +---------------------+                      
 </pre>
 </center>
         </font>
