--- a/index.html
+++ b/index.html
@@ -12,35 +12,36 @@
 
         </head>
 <body bgcolor="#fdf6e3">
-        <font face="Arial"> 
 <br>
 <br>
 <br>
 <center>
-<font size="7"><b>qejep</b></font>
 <br>
 <br>
 <pre>
-                          +---------------------+                  
-                          |     карта сайта     |                  
-                          +---+-----------+---+-+                  
-                              |      |    |   |                    
-                              |      |    |   |                    
-                 +------------+      |    |   |                    
-                 |                   |    |   |            +---------------+
-                     |                   |    |   +----------->|  <a href="about.html">о проекте</a>    |
-                   v                   |    |                +---------------+
-       +-------------------+       +--+    |                        
-       |<a href="geeklist.html"> путеводитель гика</a> |      |       |                        
-       +-------------------+       |       |        +--------------+
-                                  |       +------->|   новости    |
-                                  |                +--------------+
-                                  |                                
-                                  |                                
-                                  v                                
-                        +----------------------+                      
-                        |<a href="readinglist.html"> читательский маршрут </a>|                      
-                        +----------------------+                      
+<font face="Arial" size="7"><b>qejep   </b></font>
+
+
+                           +---------------------+                                
+                           |     карта сайта     |                                
+                           +--+-------+--------+-+                                
+                              |       |        |                                  
+                              |       |        |                                  
+                +-------------+       |        |                                  
+                |                     |        |      +--------------+            
+                |                     |        +----> |  о проекте   |            
+                v                     |        |      +--------------+            
+           +-------------------+      +---+    |                                  
+           | путеводитель гика |          |    |                                  
+           +-------------------+          |    |                  +--------------+
+                                          |    +----------------->|   новости    |
+                                          |                       +--------------+
+                                                 |                                               
+                                                 |                                               
+                                                 v                                               
+                                +----------------------+                                   
+                                | читательский маршрут |                                   
+                                                                  +----------------------+                                                                                         
 </pre>
 </center>
         </font>
