--- a/geeklist.html
+++ b/geeklist.html
@@ -24,5 +24,21 @@
 </tt>
        
 
+<pre>
+
+        o   o    изучай терминал!
+         )-(      /
+        (O O) ---
+         \=/
+        .-"-.
+       //\ /\\
+     _// / \ \\_
+        {,-.} 
+        || ||
+        || ||   
+      __|| ||__  
+
+</pre>
+
 </body>
 </html>
