--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                               |       |        |                                  
                 +-------------+       |        |                                  
                 |                     |        |      +--------------+            
-                |                     |        +----> |  о проекте   |            
+                |                     |        +----> |<a href="about.html">  о проекте   </a>|            
                 v                     |        |      +--------------+            
            +-------------------+      +---+    |                                  
-           | путеводитель гика |          |    |                                  
+           |<a href="geeklist.html"> путеводитель гика </a>|          |    |                                  
            +-------------------+          |    |                  +--------------+
                                           |    +----------------->|   новости    |
                                           |                       +--------------+
@@ -40,7 +40,7 @@
                                                   |                                               
                                                   v                                               
                                  +----------------------+                                   
-                                 | читательский маршрут |                                   
+                                 |<a href="readinglist.html"> читательский маршрут </a>|                                   
                                                                     +----------------------+                                                                                         
 </pre>
 </center>
