--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
            +-------------------+      +---+    |                                  
            |<a href="geeklist.html"> путеводитель гика </a>|          |    |                                  
            +-------------------+          |    |                  +--------------+
-                                          |    +----------------->|<a href="news.html'">   новости    </a>|
+                                          |    +----------------->|<a href="news.html">   новости    </a>|
                                           |                       +--------------+
                                                   |                                               
                                                   |                                               
