--- a/about.html
+++ b/about.html
@@ -14,19 +14,21 @@
 
        
 <tt>
-                     ----------------------------- <br>
+                     -------------------- <br>
 <a href="index.html">главная</a> ⇢ о проекте <br>
------------------------------
+--------------------
         <br>
         <br>
 
 По какой-то неведомой причине вы оказались на странице проекта
 <br><br>
-<font face="Arial"><b>qejep</b> </font>
+<center><font face="Arial" size="5"><b>qejep</b> </font></center>
 <br><br>
 Название это не имеет никакого лингвистического смысла. Графически же это напоминает 
 лицо с прищуренными глазами. Так автор проекта удовлетворил свою страсть к 
 типографике и эмотиконам. 
+<br><br>
+К слову об авторе. Им является Суховский А.В., но на страницах проекта он будет выступать под псевдонимом Къежип.
 <br><br>
 Оформление страниц намерено аскетично. Вернее, оно практически отсутствует. Это сознательный ход.
 Обусловлен он ленью и - что более важно - убежденностью автора в философии Plain text.
@@ -48,6 +50,17 @@
 <br>
 <br>
 <br>
-
+<pre> 
+           Преодолей болото в себе
+                  /
+         -    -  /
+        (o)--(o)
+       /.______.\
+       \________/
+      ./        \.
+     ( .        , )
+      \ \_\\//_/ /
+       ~~  ~~  ~~
+</pre>
 </body>
 </html>
