--- a/index.html
+++ b/index.html
@@ -16,34 +16,30 @@
 <br>
 <br>
 <center>
+                <font face="Arial" size="7"><b>qejep   </b></font>
 <br>
 <br>
 <pre>
-<font face="Arial" size="7"><b>qejep   </b></font>
-
-
-                           +---------------------+                                
-                           |     карта сайта     |                                
-                           +--+-------+--------+-+                                
-                              |       |        |                                  
-                              |       |        |                                  
-                +-------------+       |        |                                  
-                |                     |        |      +--------------+            
-                |                     |        +----> |<a href="about.html">  о проекте   </a>|            
-                v                     |        |      +--------------+            
-           +-------------------+      +---+    |                                  
-           |<a href="geeklist.html"> путеводитель гика </a>|          |    |                                  
-           +-------------------+          |    |                  +--------------+
-                                          |    +----------------->|<a href="news.html">   новости    </a>|
-                                          |                       +--------------+
-                                                                                  |                                                                                             
-                                                  v                                               
-                                  +----------------------+                                   
-                                  |<a href="readinglist.html"> читательский маршрут </a>|                                   
-+----------------------+ 
-
-***
-                                  
+                        +---------------------+                                
+                        |     карта сайта     |                                
+                        +--+-------+--------+-+                                
+                           |       |        |                                  
+                           |       |        |                                  
+             +-------------+       |        |                                  
+             |                     |        |      +--------------+            
+             |                     |        +----> |  о проекте   |            
+             v                     |        |      +--------------+            
+   +-------------------+       +---+         |                                   
+   | путеводитель гика |       |            |                                  
+   +-------------------+       |            |                  +--------------+
+                               |            +----------------->|   новости    |
+                               |                               +--------------+
+                               |                                               
+                               |                                               
+                               v                                               
+                   +----------------------+                                   
+                   | читательский маршрут |                                   
+                   +----------------------+                                           
 </pre>
 </center>
         </font>
