--- a/index.html
+++ b/index.html
@@ -16,31 +16,32 @@
 <br>
 <br>
 <center>
-                <font face="Arial" size="7"><b>qejep   </b></font>
+               
 <br>
 <br>
 <pre>
-                        +---------------------+                                
-                        |     карта сайта     |                                
-                        +--+-------+--------+-+                                
-                           |       |        |                                  
-                           |       |        |                                  
-             +-------------+       |        |                                  
-             |                     |        |      +--------------+            
-             |                     |        +----> |  о проекте   |            
-             v                     |        |      +--------------+            
-   +-------------------+       +---+         |                                   
-   | путеводитель гика |       |            |                                  
-   +-------------------+       |            |                  +--------------+
-                               |            +----------------->|   новости    |
-                               |                               +--------------+
-                               |                                               
-                               |                                               
-                               v                                               
-                   +----------------------+                                   
-                   | читательский маршрут |                                   
-                   +----------------------+                                           
-</pre>
+<font face="Arial" size="7"><b>qejep   </b></font>
+
+
+        +---------------------+                       
+        |     карта сайта     |                       
+        +----------+----------+                       
+                   |                                  
+                   |                                  
+         +---------+                                  
+         |         |          +-------------+         
+         v         +--------->|  о проекте  |         
+ +--------------+  |          +-------------+         
+ |   новости    |  |                                  
+ +--------------+  |                                  
+                   |          +-------------------+   
+                   +--------->| путеводитель гика |   
+                   |          +-------------------+   
+                   |                                  
+                   |                                  
+                   |          +----------------------+
+                   +--------->| читательский маршрут |
+                              +----------------------+</pre>
 </center>
         </font>
 </body>
