--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
                    |                                  
          +---------+                                  
          |         |          +-------------+         
-         v         +--------->|  о проекте  |         
+         v         +--------->|<a href="about.html">  о проекте  </a>|         
  +--------------+  |          +-------------+         
- |   новости    |  |                                  
+ |<a href="news.html">   новости    </a>|  |                                  
  +--------------+  |                                  
                    |          +-------------------+   
-                   +--------->| путеводитель гика |   
+                   +--------->|<a href="geeklist.html"> путеводитель гика </a>|   
                    |          +-------------------+   
                    |                                  
                    |                                  
                    |          +----------------------+
-                   +--------->| читательский маршрут |
+                   +--------->|<a href="readinglist.html"> читательский маршрут </a>|
                               +----------------------+</pre>
 </center>
         </font>
