--- a/index.html
+++ b/index.html
@@ -22,26 +22,25 @@
 <pre>
 <font face="Arial" size="7"><b>qejep   </b></font>
 
-
-        +---------------------+                       
-        |     карта сайта     |                       
-        +----------+----------+                       
-                   |                                  
-                   |                                  
-         +---------+                                  
-         |         |          +-------------+         
-         v         +--------->|<a href="about.html">  о проекте  </a>|         
- +--------------+  |          +-------------+         
- |<a href="news.html">   новости    </a>|  |                                  
- +--------------+  |                                  
-                   |          +-------------------+   
-                   +--------->|<a href="geeklist.html"> путеводитель гика </a>|   
-                   |          +-------------------+   
-                   |                                  
-                   |                                  
-                   |          +----------------------+
-                   +--------->|<a href="readinglist.html"> читательский маршрут </a>|
-                              +----------------------+</pre>
+             +---------------------+                       
+             |     карта сайта     |                       
+             +----------+----------+                       
+                        |                                  
+                        |                                  
+              +---------+                                  
+              |         |          +-------------+         
+              v         +--------->|<a href="about.html">  о проекте  </a>|         
+      +--------------+  |          +-------------+         
+      |<a href="news.html">   новости    </a>|  |                                  
+      +--------------+  |                                  
+                        |          +-------------------+   
+           +------------+--------->|<a href="geeklist.html"> путеводитель гика </a>|   
+           |            |          +-------------------+   
+           v            |                                  
+   +---------------+    |                                  
+   |<a href="webcatch.html"> Сетевой улов  </a>|    |          +----------------------+
+   +---------------+    +--------->|<a href="readinglist.html"> читательский маршрут </a>|
+                                   +----------------------+</pre>
 </center>
         </font>
 </body>
