--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
            |            |          +-------------------+   
            v            |                                  
    +---------------+    |                                  
-   |<a href="webcatch.html"> Сетевой улов  </a>|    |          +----------------------+
+   |<a href="webcatch.html"> сетевой улов  </a>|    |          +----------------------+
    +---------------+    +--------->|<a href="readinglist.html"> читательский маршрут </a>|
                                    +----------------------+</pre>
 </center>
