--- a/readinglist.html
+++ b/readinglist.html
@@ -19,8 +19,16 @@
 ------------------------------
         <br>
         <br>
-Списки книг... Они длиннее, чем наша жизнь. Кого-то это обстоятельство удручает настолько, что и не пытаются сделать чтение жизненной привычкой. 
-Но есть и те, кого так просто не испугать.
+Списки книг... Они длиннее, чем наша жизнь. Кого-то это обстоятельство удручает настолько, 
+что и не пытаются сделать чтение жизненной привычкой. 
+Но есть и те, кого так просто не испугать.  
+<br>
+<br>
+Спики книг, представленные здесь, помогают наметить читательские маршруты. 
+Однако они не являются ни исчерпывающими, ни обязательными. 
+<br>
+<br>
+Список книг, в которых художественно осмысляется феномен рекламы и PR
 
 </tt>
 
