--- a/prandadim.html
+++ b/prandadim.html
@@ -15,7 +15,7 @@
        
 <tt>
                      ------------------------------ <br>
-<a href="index.html">главная</a> ⇢ читательский маршрут ⇢ образ рекламиста и пиарщика <br>
+<a href="index.html">главная</a> ⇢ <a href="readinglist.html">читательский маршрут</a> ⇢ образ рекламиста и пиарщика <br>
 ------------------------------
         <br>
         <br>
