--- a/readinglist.html
+++ b/readinglist.html
@@ -28,7 +28,7 @@
 Однако они не являются ни исчерпывающими, ни обязательными. 
 <br>
 <br>
-Список книг, в которых художественно осмысляется феномен рекламы и PR
+<a href="prandadim.html">Список книг, в которых художественно осмысляется феномен рекламы и PR</a>
 
 </tt>
 
