--- a/prandadim.html
+++ b/prandadim.html
@@ -14,20 +14,20 @@
 
        
 <tt>
-                     ------------------------------ <br>
+                     --------------------------------------------- <br>
 <a href="index.html">главная</a> ⇢ <a href="readinglist.html">читательский маршрут</a> ⇢ образ рекламиста и пиарщика <br>
-------------------------------
+---------------------------------------------
         <br>
         <br>
-1 Пелевин. Поколение Пи.<br>
-2 Бегбедер. 99 франков.<br>	
-3 Генри Карттнер. День не в счет.	<br>
-4 Гриффит Э. Слушайте, слушайте.<br>
-5 Рэй Рассел. Комната.<br>
-6 Пол Фредерик. Туннель под миром<br>
-7 Фредерик Пол, Сирил Корнблат. Операция «Венера»<br>
-8 Кристофер Т. Бакли. Здесь курят.<br>
-9 Олдос Хаксли. О дивный новый мир.<br>
+1. Виктор Пелевин. Поколение Пи.<br>
+2. Фредерик Бегбедер. 99 франков.<br>	
+3. Генри Карттнер. День не в счет.	<br>
+4. Энн Гриффит. Слушайте, слушайте.<br>
+5. Рэй Рассел. Комната.<br>
+6. Пол Фредерик. Туннель под миром<br>
+7. Фредерик Пол, Сирил Корнблат. Операция «Венера»<br>
+8. Кристофер Т. Бакли. Здесь курят.<br>
+9. Олдос Хаксли. О дивный новый мир.<br>
         
 </tt>
 
