--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 Слишком много в нашем сегодняшнем мире посвящено форме в ущерб содержанию. Нужно
 сделать смелый шаг и вернуться обратно к тексту. 
 <br><br>
-Пока в проекте всего два содержательных раздела:
+Пока в проекте всего три содержательных раздела:
  <br>
  <br>
 1. <a href="readinglist.html">Читательский маршрут. </a>
@@ -46,6 +46,12 @@
 2. <a href="geeklist.html">Путеводитель гика.</a>
 <br>
 Специфический раздел, предназначенный для тех, кто хочет более эффективно использовать компьютер в академической жизни.
+<br>
+<br>
+3. <a href="webcatch.html">Сетевой улов.</a>
+<br>
+Тематически организованная подборка интернет-ресурсов.
+
 </tt>
 <br>
 <br>
