--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
 <br>
 <br>
 <pre>
-<font face="Arial" size="7"><b>qejep      </b></font>
+<font face="Arial" size="7"><b>   qejep</b></font>
 
-             +---------------------+                       
-             |     карта сайта     |                       
-             +----------+----------+                       
-                        |                                  
-                        |                                  
-              +---------+                                  
-              |         |          +-------------+         
-              v         +--------->|<a href="about.html">  о проекте  </a>|         
-      +--------------+  |          +-------------+         
-      |<a href="news.html">   новости    </a>|  |                                  
-      +--------------+  |                                  
-                        |          +-------------------+   
-           +------------+--------->|<a href="geeklist.html"> путеводитель гика </a>|   
-           |            |          +-------------------+   
-           v            |                                  
-   +---------------+    |                                  
-   |<a href="webcatch.html"> сетевой улов  </a>|    |          +----------------------+
-   +---------------+    +--------->|<a href="readinglist.html"> читательский маршрут </a>|
-                                   +----------------------+</pre>
+                            +---------------------+                       
+                            |     карта сайта     |                       
+                            +----------+----------+                       
+                                       |                                  
+                                       |                                  
+                             +---------+                                  
+                             |         |          +--------------+        
+                             v         +--------->|<a href="webcatch.html"> сетевой улов </a>|        
+                     +--------------+  |          +--------------+        
+                     |<a href="about.html">  о проекте   </a>|  |                                  
+                     +--------------+  |                                  
+                                       |          +-------------------+   
+                          +------------+--------->|<a href="geeklist.html"> путеводитель гика </a>|   
+                          |            |          +-------------------+   
+                          v            |                                  
+                  +---------------+    |                                  
+                  |<a href="news.html">    новости    </a>|    |          +----------------------+
+                  +---------------+    +--------->|<a href="readinglist.html"> читательский маршрут </a>|
+                                                  +----------------------+</pre>
 </center>
         </font>
 </body>
