--- a/readinglist.html
+++ b/readinglist.html
@@ -19,13 +19,10 @@
 ------------------------------
         <br>
         <br>
-Списки книг... Они длиннее, чем наша жизнь. Кого-то это обстоятельство удручает настолько, 
-что и не пытаются сделать чтение жизненной привычкой. 
-Но есть и те, кого так просто не испугать.  
-<br>
-<br>
 Спики книг, представленные здесь, помогают наметить читательские маршруты. 
 Однако они не являются ни исчерпывающими, ни обязательными. 
+Это просто тематические подборки работ, которые я прочёл или 
+планирую прочесть. 
 <br>
 <br>
 <a href="prandadim.html">Список книг, в которых художественно осмысляется феномен рекламы и PR</a>
