--- a/readinglist.html
+++ b/readinglist.html
@@ -21,7 +21,7 @@
         <br>
 Спики книг, представленные здесь, помогают наметить читательские маршруты. 
 Однако они не являются ни исчерпывающими, ни обязательными. 
-Это просто тематические подборки работ, которые я прочёл или 
+Это просто тематические подборки текстов, которые я прочёл или 
 планирую прочесть. 
 <br>
 <br>
