--- a/webcatch.html
+++ b/webcatch.html
@@ -20,7 +20,8 @@
         <br>
         <br>
 Здесь размещается коллекция ссылок на разные полезные или просто интересные ресурсы. 
-Раньше я хранил их в браузере. Но когда ссылок становится много их хочется организовать тематически, сопроводить комментариями, быстро поделиться необходимыми сведениями с другими.
+Это самый простой способ организовать находки тематически, сопроводить комментариями и 
+быстро поделиться необходимыми сведениями с другими.
 
 </tt>
        
