--- a/webcatch.html
+++ b/webcatch.html
@@ -20,7 +20,7 @@
         <br>
         <br>
 Здесь размещается коллекция ссылок на разные полезные или просто интересные ресурсы. 
-Это самый простой способ организовать находки тематически, сопроводить комментариями и 
+Это самый простой способ организовать находки тематически, сопроводить их комментариями и 
 быстро поделиться необходимыми сведениями с другими.
 
 </tt>
