--- a/geeklist.html
+++ b/geeklist.html
@@ -19,7 +19,28 @@
 ----------------------------
         <br>
         <br>
-Зачем!? Такой вопрос возникает у непосвященных, когда они видят темный экран и мигающий курсор. Где иконки? Почему не работает мышка?
+Зачем!? Такой вопрос возникает у непосвященных, когда они видят темный экран и мигающий курсор. 
+Где иконки? Почему не работает мышка? Зачем так усложнять себе жизнь?
+<br>
+<br>
+На самом деле, использование командной строки, как только вы освоитесь, позволит вам работать быстрее 
+и эффективнее. 
+<br>
+<br>
+Ниже представлена подборка приложений, которые могут пригодиться.
+<br>
+<br>
+<br>
+<b>Ascii графика</b><br><br>
+Картинки, конечно, не сделают вас более продуктивным. Но они помогают улыбнуться, а это тоже важно.<br>
+Сайты и приложения для создания ascii графики <br><br>
+http://www.asciiworld.com
+https://textart.io
+https://ascii.co.uk
+<br><br>
+Коллекции картинок
+https://asciiart.website/index.php
+http://instinct.org/cows/ascii-cows1.html
 
 </tt>
        
