--- a/geeklist.html
+++ b/geeklist.html
@@ -31,16 +31,17 @@
 <br>
 <br>
 <br>
-<b>Ascii графика</b><br><br>
-Картинки, конечно, не сделают вас более продуктивным. Но они помогают улыбнуться, а это тоже важно.<br>
+<b>Ascii Pictures</b><br><br>
+Картинки, конечно, не сделают вас более продуктивным. Но они помогают улыбнуться, а это тоже важно.
+<br><br>
 Сайты и приложения для создания ascii графики <br><br>
-http://www.asciiworld.com
-https://textart.io
-https://ascii.co.uk
+<a href="http://www.asciiworld.com">asciiworld.com</a><br>
+<a href="https://textart.io">textart.io</a><br>
+<a href="https://ascii.co.uk">ascii.co.uk</a><br>
 <br><br>
 Коллекции картинок
-https://asciiart.website/index.php
-http://instinct.org/cows/ascii-cows1.html
+<a href="https://asciiart.website/index.php">asciiart.website</a><br>
+<a href="http://instinct.org/cows/ascii-cows1.html">instinct.org</a><br>
 
 </tt>
        
