--- a/geeklist.html
+++ b/geeklist.html
@@ -39,13 +39,15 @@
 <a href="https://textart.io">textart.io</a><br>
 <a href="https://ascii.co.uk">ascii.co.uk</a><br>
 <br><br>
-Коллекции картинок
+Коллекции картинок <br><br>
 <a href="https://asciiart.website/index.php">asciiart.website</a><br>
 <a href="http://instinct.org/cows/ascii-cows1.html">instinct.org</a><br>
 
 </tt>
        
-
+<br>
+<br>
+<br>
 <pre>
 
         o   o    изучай терминал!
