--- a/webcatch.html
+++ b/webcatch.html
@@ -23,8 +23,25 @@
 Это самый простой способ организовать находки тематически, сопроводить их комментариями и 
 быстро поделиться необходимыми сведениями с другими.
 
+<br>
+<br>
+<br>
+<b>Ascii Pictures</b><br><br>
+Картинки, конечно, не сделают вас более продуктивным. Но они помогают улыбнуться, а это тоже важно.
+<br><br>
+Сайты и приложения для создания ascii графики <br><br>
+<a href="http://www.asciiworld.com">asciiworld.com</a><br>
+<a href="https://textart.io">textart.io</a><br>
+<a href="https://ascii.co.uk">ascii.co.uk</a><br>
+<br><br>
+Коллекции картинок <br><br>
+<a href="https://asciiart.website/index.php">asciiart.website</a><br>
+<a href="http://instinct.org/cows/ascii-cows1.html">instinct.org</a><br>
+
 </tt>
-       
+       <br>
+       <br>
+       <br>
 
 <pre>
         
