--- a/prandadim.html
+++ b/prandadim.html
@@ -19,16 +19,18 @@
 ---------------------------------------------------------
         <br>
         <br>
-1. Виктор Пелевин. Поколение Пи.<br>
-2. Фредерик Бегбедер. 99 франков.<br>	
-3. Генри Карттнер. День не в счет.	<br>
-4. Энн Гриффит. Слушайте, слушайте.<br>
-5. Рэй Рассел. Комната.<br>
-6. Пол Фредерик. Туннель под миром<br>
-7. Фредерик Пол, Сирил Корнблат. Операция «Венера»<br>
-8. Кристофер Т. Бакли. Здесь курят.<br>
-9. Олдос Хаксли. О дивный новый мир.<br>
-        
+<ol>
+<li> Виктор Пелевин. Поколение Пи.
+<li> Фредерик Бегбедер. 99 франков.	
+<li> Генри Карттнер. День не в счет.
+<li> Энн Гриффит. Слушайте, слушайте.
+<li> Рэй Рассел. Комната.
+<li> Пол Фредерик. Туннель под миром.
+<li> Фредерик Пол, Сирил Корнблат. Операция «Венера».
+<li> Кристофер Т. Бакли. Здесь курят.
+<li> Олдос Хаксли. О дивный новый мир.
+</ol>  
+      
 </tt>
 
 <br>
