--- a/readinglist.html
+++ b/readinglist.html
@@ -25,7 +25,7 @@
 планирую прочесть. 
 <br>
 <br>
-<a href="prandadim.html">Список книг, в которых художественно осмысляется феномен рекламы и PR</a>
+<a href="bib01prad.html">Список книг, в которых художественно осмысляется феномен рекламы и PR</a>
 
 </tt>
 
