--- a/readinglist.html
+++ b/readinglist.html
@@ -24,9 +24,10 @@
 Это просто тематические подборки текстов, которые я прочёл или 
 планирую прочесть. 
 <br>
-<br>
-<a href="bib01prad.html">Список книг, в которых художественно осмысляется феномен рекламы и PR</a>
-
+<lo>
+<li><a href="bib01prad.html">Список книг, в которых художественно осмысляется феномен рекламы и PR</a>
+<li><a href="bib02write.html">Спискок книг, для тех, кто хочет научиться писать прозу</a>
+</lo>
 </tt>
 
 <br>
