--- a/geeklist.html
+++ b/geeklist.html
@@ -30,6 +30,17 @@
 Ниже представлена подборка приложений, которые могут вам пригодиться. 
 К сожалению, с руссификацией программ дело обстоит плохо. Там, где это будет необходимо я дам аннотацию 
 или краткие инструкции по использованию.
+<br>
+<br>
+<br>
+<b>Загрузка видео с Youtube и других видеохостингов.</b> <br>
+Существует огромное количество разных приложений, которые позволяют загрузить видео с сайта, подобного
+Youtube. Большинство из них платные, тяжелые и глючные. :(
+ <br>
+ Для тех, кто способен использовать терминал есть потрясающая альтернатива. <br>
+ Это приложение youtube-dl <br>
+ Оно запускается прямо из командной строки, мало весит, обладает очень гибкими настройками (платным аналогам такое и не снилось).
+ Вот страничка проекта на github - <a href="https://github.com/ytdl-org/youtube-dl">https://github.com/ytdl-org/youtube-dl</a>
 </tt>
        
 <br>
