--- a/geeklist.html
+++ b/geeklist.html
@@ -37,9 +37,10 @@
 Существует огромное количество разных приложений, которые позволяют загрузить видео с сайта, подобного
 Youtube. Большинство из них платные, тяжелые и глючные. :(
  <br>
- Для тех, кто способен использовать терминал есть потрясающая альтернатива. <br>
+ Для тех, кто способен использовать терминал, есть потрясающая альтернатива. <br>
  Это приложение youtube-dl <br>
- Оно запускается прямо из командной строки, мало весит, обладает очень гибкими настройками (платным аналогам такое и не снилось).
+ Оно запускается прямо из командной строки, мало весит, обладает очень гибкими 
+ настройками (платным аналогам такое и не снилось).<br>
  Вот страничка проекта на github - <a href="https://github.com/ytdl-org/youtube-dl">https://github.com/ytdl-org/youtube-dl</a>
 </tt>
        
