--- a/geeklist.html
+++ b/geeklist.html
@@ -33,7 +33,8 @@
 <br>
 <br>
 <br>
-<b>Загрузка видео с Youtube и других видеохостингов.</b> <br>
+<h2>Терминальные приложения для решения различных задач</h2>
+<h3>Загрузка видео с Youtube и других видеохостингов.</h3>
 Существует огромное количество разных приложений, которые позволяют загрузить видео с сайта, подобного
 Youtube. Большинство из них платные, тяжелые и глючные. :(
  <br>
@@ -42,6 +43,37 @@ Youtube. Большинство из них платные, тяжелые и г
  Оно запускается прямо из командной строки, мало весит, обладает очень гибкими 
  настройками (платным аналогам такое и не снилось).<br>
  Вот страничка проекта на github - <a href="https://github.com/ytdl-org/youtube-dl">https://github.com/ytdl-org/youtube-dl</a>
+<br>
+<br>
+<h2>Инормация для гиков 80-го уровня</h2>
+<h3>Каринки в Ascii</h3>
+Картинки, конечно, не сделают вас более продуктивным. Но они помогают улыбнуться, а это тоже важно.
+<br><br>
+Сайты c коллекциями ascii графики и приложениями для её создания <br><br>
+<a href="http://www.asciiworld.com">asciiworld.com</a><br>
+<a href="https://textart.io">textart.io</a><br>
+<a href="https://ascii.co.uk">ascii.co.uk</a><br>
+<a href="http://patorjk.com/software/taag/#p=display&f=Graffiti&t=Type%20Something%20">patorjk.com/software/taag</a>
+<br><br>
+Коллекции картинок <br><br>
+<a href="https://asciiart.website/index.php">asciiart.website</a><br>
+<a href="http://instinct.org/cows/ascii-cows1.html">instinct.org</a>
+<br>
+<br>
+
+<h3>Фильм в Ascii</h3>
+Если вам не хватает гиковости картинок в ascii, посмотрите полнометражный фильм, не выходя
+из терминала. 
+<br> 
+Пока доступен только Star Wars Episode IV: A New Hope. <br>
+Вам нужно установить приложение Telnet и затем набрать команду: <br>
+telnet towel.blinkenlights.nl
+<br><br>
+<h3>Одна из самых сложных игр - NetHack</h3>
+Игра возникла в 1987 году и до сих пор дорабатывается. Нет практически никаких шансов, что вы пройдете все 50 
+уровней в ближайшие 10 лет, но попытаться можно. <br>
+Вот ссылка на официальный сайт <a href="https://www.nethack.org">www.nethack.org</a>
+
 </tt>
        
 <br>
