--- a/geeklist.html
+++ b/geeklist.html
@@ -45,7 +45,7 @@ Youtube. Большинство из них платные, тяжелые и г
  Вот страничка проекта на github - <a href="https://github.com/ytdl-org/youtube-dl">https://github.com/ytdl-org/youtube-dl</a>
 <br>
 <br>
-<h2>Инормация для гиков 80-го уровня</h2>
+<h2>Информация для гиков 80-го уровня</h2>
 <h3>Каринки в Ascii</h3>
 Картинки, конечно, не сделают вас более продуктивным. Но они помогают улыбнуться, а это тоже важно.
 <br><br>
