--- a/geeklist.html
+++ b/geeklist.html
@@ -32,13 +32,15 @@
 или краткие инструкции по использованию.
 <br>
 <br>
+* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+<br>
 <br>
 <h2>Терминальные приложения для решения различных задач</h2>
 <h3>Загрузка видео с Youtube и других видеохостингов.</h3>
-Существует огромное количество разных приложений, которые позволяют загрузить видео с сайта, подобного
-Youtube. Большинство из них платные, тяжелые и глючные. :(
+Существует огромное количество приложений, которые позволяют загрузить видео с сайта, подобного
+Youtube. Есть также специальные плагины для браузеров. Всё это суета и томление духа.
  <br>
- Для тех, кто способен использовать терминал, есть потрясающая альтернатива. <br>
+ Для тех, кто способен использовать терминал, существует потрясающая альтернатива. <br>
  Это приложение youtube-dl <br>
  Оно запускается прямо из командной строки, мало весит, обладает очень гибкими 
  настройками (платным аналогам такое и не снилось).<br>
