--- a/readinglist.html
+++ b/readinglist.html
@@ -25,8 +25,9 @@
 планирую прочесть. 
 <br>
 <ol>
-<li><a href="bib01prad.html">Список книг, в которых художественно осмысляется феномен рекламы и PR</a>
-<li><a href="bib02write.html">Спискок книг, для тех, кто хочет научиться писать прозу</a>
+<li><a href="bib03psi.html">Списко книг, для тех, кто хочет подружиться с головой.</a>
+<li><a href="bib01prad.html">Список книг, в которых художественно осмысляется феномен рекламы и PR.</a>
+<li><a href="bib02write.html">Спискок книг, для тех, кто хочет научиться писать прозу.</a>
 </ol>
 </tt>
 
