--- a/bib03psi.html
+++ b/bib03psi.html
@@ -23,8 +23,8 @@
     <li> Паддикомб Э. Медитация и осознанность. 
     <li> Сигел Д. Внимательный мозг. Научный взгляд на медитацию.
     <li> О’Кейн О. Десять минут до дзена. 
-    <li> Питерс С. Парадокс шимпанзе. Менеджмент мозга
-    <li> Бек Д. Когнитивно-поведенческая терапия. От основ к направлениям
+    <li> Питерс С. Парадокс шимпанзе. Менеджмент мозга.
+    <li> Бек Д. Когнитивно-поведенческая терапия. От основ к направлениям.
 </ol>  
       
 </tt>
