--- a/about.html
+++ b/about.html
@@ -51,7 +51,10 @@
 3. <a href="webcatch.html">Сетевой улов.</a>
 <br>
 Тематически организованная подборка интернет-ресурсов.
-
+<br>
+<br>
+Проект будет еженедельно пополняться новыми сведениями. Чтобы следить за поступлениями,
+проверяйте раздел <a href="news.html">новости</a> по пятницам.
 </tt>
 <br>
 <br>
