--- a/geeklist.html
+++ b/geeklist.html
@@ -28,8 +28,12 @@
 <br>
 <br>
 Ниже представлена подборка приложений, которые могут вам пригодиться. 
-К сожалению, с руссификацией программ дело обстоит плохо. Там, где это будет необходимо я дам аннотацию 
+К сожалению, с руссификацией программ дело в большинстве случаев обстоит плохо. Там, где это будет необходимо я дам аннотацию 
 или краткие инструкции по использованию.
+<br>
+<br>
+Важное примечание! Если на вашем компьютере установлена операционная система Windows, придется прибегнуть к помощи 
+приложения <a href="https://www.cygwin.com">Cygwin</a>.
 <br>
 <br>
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
