--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
  <br>
 1. <a href="readinglist.html">Читательский маршрут. </a>
 <br>
-Здесь вы найдете списки литературы по всевозможным темам. Краткие анотации помогут вам соориентироваться.
+Здесь вы найдёте списки литературы по всевозможным темам. Краткие аннотации помогут вам сориентироваться.
 <br>
 <br>
 2. <a href="geeklist.html">Путеводитель гика.</a>
