--- a/geeklist.html
+++ b/geeklist.html
@@ -40,6 +40,26 @@
 <br>
 <br>
 <h2>Терминальные приложения для решения различных задач</h2>
+<h3>Тайм-менеджмент</h3>
+Начнем этот раздел с приложения <b>todo.txt</b> 
+<br>
+Это замечательная задумка Джины Трапани, создателя ресурса lifehacker (не путайте с русскоязычным вариантом). <br>
+Программа позволяет использовать терминал для составления списка дел и управления задачами. <br>
+Трапани активно пропагандирует “Plain text” подход к организации данных. 
+Вы можете посмотреть ее статьи на <a href="https://kinja.com/Gina">lifehacker.</a> 
+<br>
+Функционал приложения todo.txt несколько ограничен. 
+Без установки дополнительных расширений вы не сможете создавать повторяющиеся задачи. <br>
+Заметим, что некоторые специалисты по самоорганизации считают, что повторяющиеся задачи должны «жить» в календаре, 
+а не списке дел. 
+<br>
+Как бы то ни было, у приложения todo.txt есть другие достоинства. 
+Прежде всего, это очень простой синтаксис. 
+Вы можете легко читать и редактировать файлы со списками дел в Vim или обычном блокноте, предустановленном на ПК. 
+<br>
+<a href="geek01inst.html">Перейти к инструкциям</a>
+<br>
+<br>
 <h3>Загрузка видео с Youtube и других видеохостингов.</h3>
 Существует огромное количество приложений, которые позволяют загрузить видео с сайта, подобного
 Youtube. Есть также специальные плагины для браузеров. Всё это суета и томление духа.
