--- a/geek01inst.html
+++ b/geek01inst.html
@@ -19,7 +19,7 @@
 ---------------------------------------------------------
         <br>
         <br>
-        ==========Предупреждение==========
+        ==========Предупреждение==========<br>
         Для настоящего гика это не кошерно, но я должен упомянуть, что приложение todo.txt <br>
         имеет реализации с графическим интерфейсом. Вы можете посмотреть их на <a href="http://todotxt.org">официальном сайте</a>
         =======Конец предупреждения=======
