--- a/geek01inst.html
+++ b/geek01inst.html
@@ -15,7 +15,7 @@
        
 <tt>
                      --------------------------------------------------------- <br>
-<a href="index.html">главная</a> ⇢ <a href="readinglist.html">читательский маршрут</a> ⇢ образ рекламиста и пиарщика <br>
+<a href="index.html">главная</a> ⇢ <a href="geeklist.html">путеводитель гика</a> ⇢ todo.txt <br>
 ---------------------------------------------------------
         <br>
         <br>
