--- a/geek01inst.html
+++ b/geek01inst.html
@@ -19,10 +19,11 @@
 ---------------------------------------------------------
         <br>
         <br>
-        ==========Предупреждение==========<br>
+        ~~~~~~~~~~~~Предупреждение~~~~~~~~~~~~<br>
         Для настоящего гика это не кошерно, но я должен упомянуть, что приложение todo.txt <br>
         имеет реализации с графическим интерфейсом. Вы можете посмотреть их на <a href="http://todotxt.org">официальном сайте</a>
-        =======Конец предупреждения=======
+        <br>
+        ~~~~~~~~~Конец предупреждения~~~~~~~~~
         <br><br>
         Скачиваем последний релиз здесь:
         <a href="https://github.com/todotxt/todo.txt-cli/releases">github.com/todotxt</a>
