--- a/geek01inst.html
+++ b/geek01inst.html
@@ -20,18 +20,17 @@
         <br>
         <br>
 
-        Скачиваем последний релиз здесь:
-        <a href="https://github.com/todotxt/todo.txt-cli/releases">github.com/todotxt</a>
+        Инструкции по установке здесь:
+        <a href="https://github.com/todotxt/todo.txt-cli/wiki/Quick-Start-Guide">github.com/todotxt</a>
         <br>
-        Там три файла. Размещаем их в домашней директории. 
         <br>
-        Открываем файл todo.cfg и меняем настройки, указывающие путь к папкам с вашим todo.txt
+        Дальше вам нужно найти файл todo.cfg и поменять настройки, указывающие путь к папкам с вашим todo.txt
         <br>
         В строчке<br>
         export TODO_DIR="/Users/YOUR_HOME_DIR/Documents"<br>
         В кавычках должен быть указан путь к папке, в которой вы намереваетесь хранить файлы todo и done
         <br><br>
-        Копируем это файл в домашнюю директорию: <br>
+        Копируем этот файл в домашнюю директорию: <br>
         /User/Ваше_имя_на_Pc
         <br><br>
         Теперь можно работать с вашими todo файлами в терминале, используя команды.
