--- a/geek01inst.html
+++ b/geek01inst.html
@@ -51,7 +51,7 @@
         <h3>Синтаксис todo</h3>
         Подробные инстукции смотрите на официальном <a href="https://github.com/todotxt/todo.txt-cli/blob/v2.11.0/USAGE.md">github</a>
         <br><br>
-        Ваши задачи хранятся в обычном txt файле. Его можно редактировать прямо в блокноте или Vim. По умолчанию каждая новая строка
+        Ваши задачи хранятся в обычном txt файле. Его можно редактировать прямо в блокноте или в Vim. По умолчанию каждая новая строка
         воспринимается todo.txt как новая задача. <br><br>
         Таким образом, запись <br>
         Купить слона <br>
@@ -59,7 +59,7 @@
         Продать слона<br>
         Будет интерпретирована как три задачи.<br><br>
         Пока ничего особенного... Однако приложение todo.txt позволяет вам быстро и эффективно работать с задачами, используя особый синтаксис. <br>
-        Приведем для примера стоку со всеми возможными метаданными:  <br>
+        Приведем для примера строку со всеми возможными метаданными:  <br><br>
         x (A) 2019-08-29 2019-06-01 купить слона +зоопарк @Африка due:2019-07-24 <br><br>
         Что мы здесь имеем? <br>
         x - отметка о выполнении задания. <br>
@@ -72,7 +72,7 @@
         due:2019-07-24 - дата, на которую запланировано задание. <br><br>
         Синтаксис воплне читабелен и без приложения. Приложение позволяет фильтровать данные и быстро их редактировать. <br><br>
 
-        Здесь приведены самые важные команды <br><br>
+        <h3>Далее приведены самые важные команды</h3>
         добавляем задачу <br>
         t a какая-то задача<br><br>
         добавляем к задачу и помечаем, что это часть определенного проекта и контекста
@@ -85,7 +85,7 @@
         t p 1 A <br><br>
         убираем приоритетность<br>
         t dp 1 <br><br>
-        помечаем задание №2 как сделанное<br>
+        помечаем задание №2 как сделанное. Оно будет автоматически перенесено в файл done.txt<br>
         t do 2<br><br>
         выводим на экран список контекстов<br>
         t lsc<br><br>
