--- a/geek01inst.html
+++ b/geek01inst.html
@@ -47,6 +47,15 @@
              export TODOTXT_DEFAULT_ACTION=ls <br>
              alias t='./todo.sh -d /путь/к вашему/todo.cfg' <br>
         4. Теперь набрав t вы можете сразу печатать ваши команды.<br>
+        <br><br>
+        Есть еще две полезные конфигурации, которые стоит разместить в файле .todo.cfg<br>
+        export TODOTXT_DATE_ON_ADD=1<br>
+        export TODOTXT_AUTO_ARCHIVE=0<br>
+        <br>
+        Ноль и единица - это выключение и включение функции. Первая команда включает автоматическое добавление даты создания к задачам (по умолчанию функция отключена).
+        <br>
+        Вторая команда отключает автоархивирование (по умолчанию ваши выполненные задачи пропадают из списка и переносятся в архив).<br><br>
+        Теперь стоит перейти к синтаксису команд. <br><br>
         
         <h3>Синтаксис todo</h3>
         Подробные инстукции смотрите на официальном <a href="https://github.com/todotxt/todo.txt-cli/blob/v2.11.0/USAGE.md">github</a>
@@ -81,21 +90,21 @@
         t ls <br><br>
         фильтруем список по заданным критериям <br>
         t ls +проект 2019-08-29 @контекст <br><br>
-        добавляем приоритетность А заданию №1<br>
+        добавляем приоритетность А задаче №1<br>
         t p 1 A <br><br>
         убираем приоритетность<br>
         t dp 1 <br><br>
-        помечаем задание №2 как сделанное. Оно будет автоматически перенесено в файл done.txt<br>
+        помечаем задачи №2 как сделанное. Оно будет автоматически перенесено в файл done.txt<br>
         t do 2<br><br>
         выводим на экран список контекстов<br>
         t lsc<br><br>
         выводим на экран список проектов<br>
         t lsprj <br><br>
-        заменяем текст задания №2 <br>
+        заменяем текст задачи №2 <br>
         t replace 2 некий текст<br><br>
-        прибавляем текст к заданию №2 (если нужно что-то дописать)<br>
+        прибавляем текст после задачи (если нужно что-то дописать). Это удобно, если вы хотите добавить контекст или помести задачу в проект<br>
         t app 2 некий текст <br><br>
-        прибавляем до задания №2 (если нужно что-то приписать сначала фразы)<br>
+        прибавляем текст перед задачей (если нужно что-то приписать сначала фразы)<br>
         t prepend 2 некий текст <br><br>
         переносим задание №10 в новый файл<br>
         t mv 10 имя_файла.txt <br><br>
@@ -115,19 +124,18 @@
         +bb -bb<br><br>
         выводим на экран только задания с приоритетностью.<br>
         t lsp<br><br>
-        добавляем к заданию дату создания<br>
+        добавляем к заданию дату создания. Если функция автодобавления даты отключена<br>
         -t <br>
         например: t -t a купить слона <br><br>
-        архивируем выполненные задания <br>
+        архивируем выполненные задания. Если у вас отключено автоархивирование. <br>
         t archive <br><br>
-        отмена автоархивирования для конкретного задания<br>
+        отмена автоархивирования для конкретного задания. Если у вас включено автоархивирование.<br>
         -а 
         <br><br>
-        ~~~~~~~~~~~~Предупреждение~~~~~~~~~~~~<br>
+        <b>А теперь о самом интересном</b><br>
         Для настоящего гика это не кошерно, но я должен упомянуть, что приложение todo.txt <br>
         имеет реализации с графическим интерфейсом. Вы можете посмотреть их на <a href="http://todotxt.org">официальном сайте</a>
-        <br>
-        ~~~~~~~~~Конец предупреждения~~~~~~~~~
+
         <br><br>
         
 </tt>
