--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 <br>
 2. <a href="geeklist.html">Путеводитель гика.</a>
 <br>
-Специфический раздел, предназначенный для тех, кто хочет более эффективно использовать компьютер в академической жизни.
+Специфический раздел, предназначенный для тех, кто хочет более эффективно использовать компьютер как инструмент для личного саморазвития и учёбы. 
 <br>
 <br>
 3. <a href="webcatch.html">Сетевой улов.</a>
